[package]
name = "os_rust"
version = "0.1.0"
edition = "2024"
[profile.dev]
panic="abort"
[profile.release]
panic="abort"
[[bin]]
name="os_rust"
test=false
bench=false
[unstable]
build-std-features = ["compiler-builtins-mem"]
build-std = ["core", "compiler_builtins"]

[build-dependencies]
bootloader = "0.11.11"