[package]
name = "os_rust"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04","-vnc", ":0","-serial","stdio"]
test-success-exit-code = 33    

[[bin]]
name = "os_rust"
test = true # mark this field as true when running tests
bench = false


[profile.dev]
panic="abort"
[profile.release]
panic="abort"

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
x86_64 = "0.15.2"
uart_16550 = "0.4.0"
